...
    
    var body: some View {
        VStack {
            Spacer()
            Text("What's your pet's breed?")
                .font(.title2)
            TextField("Type breed", text: $breedTextField)
                .foregroundColor(.black)
                .padding(.horizontal)
                .frame(height: 55)
                .background(Color.textfieldColor)
                .cornerRadius(10)
            Text("What's your pet's color?")
                .font(.title2)
            TextField("Type color here...", text: $colorTextField)
                .padding(.horizontal)
                .frame(height: 55)
                .background(Color.textfieldColor)
                .cornerRadius(10)
            Text("What's your pet's weight?")
                .font(.title2)
...
