...
        NavigationView{
            VStack {
                Text("What's your pet's name?")
                    .font(.title)
                    .fontWeight(.semibold)
                Spacer()
                TextField("Enter your pet's name here...", text: $textFieldText)
                    .foregroundColor(.universalColor)
                    .keyboardType(.emailAddress)
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .padding()
                    .background(
...
                        )
                    .padding()
                Button {
                        saveText()
                        nextView.toggle()
                } label: {
                    Text("NEXT")
                        .padding(.horizontal, 157)
                        .padding(.vertical, 15)
                        .background(Color.buttonColor )
                        .cornerRadius(10)
                        .foregroundColor(Color.white)
                        .font(.headline)
...
