...
    var body: some View {
        ZStack {
            Color.blackColor
                .ignoresSafeArea()
            ScrollView {
                VStack {
                    TextField("Enter the new item...", text: $textFieldText)
                        .padding(.horizontal, 20)
                        .padding(.vertical, 15)
                        .background(Color.blackColor)
                        .border(Color.universalColor)
                        .cornerRadius(5)
                    
...
